--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -51,3 +51,9 @@
 /*------------------------------------------------------------*\
                        PAGE INCLUDES
 \*------------------------------------------------------------*/
+
+/*------------------------------------------------------------*\
+                       BROWSER HACKS
+\*------------------------------------------------------------*/
+
+@import "components/shame";
