--- a/scss/helpers/_breakpoints-config.scss
+++ b/scss/helpers/_breakpoints-config.scss
@@ -7,6 +7,7 @@ $mobile-wide: breakpointToEm(668px);
 $tablet-portrait: breakpointToEm(768px);
 
 $desktop-small: breakpointToEm(1024px);
+$desktop-small-custom: breakpointToEm(1180px);
 $desktop-medium: breakpointToEm(1280px);
 $desktop-large: breakpointToEm(1440px);
 $desktop-largest: breakpointToEm(1920px);
