--- a/scss/components/_typography.scss
+++ b/scss/components/_typography.scss
@@ -4,7 +4,7 @@ body {
     font-family: $fontPrimary;
     @include adjust-font-size-to($base-font-size, 6);
     -webkit-font-smoothing: antialiased;
-    text-shadow: 1px 1px 1px rgba(0,0,0,0.004);
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.004);
     font-weight: $medium;
 }
 
@@ -34,7 +34,7 @@ h1 {
     }
 
     @media screen and (min-width: $desktop-small-custom) {
-        @include adjust-font-size-to(110px);
+        @include adjust-font-size-to(130px);
     }
 }
 
@@ -47,7 +47,6 @@ h2 {
     @media screen and (min-width: $mobile-landscape) {
         @include adjust-font-size-to(48px);
     }
-
 }
 
 h3 {
@@ -64,11 +63,11 @@ a {
     text-decoration: none;
     border-bottom: 1px solid $ctaColor;
     color: $ctaColor;
-    transition: color .3s ease;
+    transition: color 0.3s ease;
     outline: none;
 
     &:hover {
-        color: darken($ctaColor,10%);
-        border-bottom-color: darken($ctaColor,10%);
+        color: darken($ctaColor, 10%);
+        border-bottom-color: darken($ctaColor, 10%);
     }
 }
