--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -10,7 +10,7 @@
         @include padding-trailer(10);
         display: none;
 
-        @media screen and (min-width: $mobile-landscape-custom) {
+        @media screen and (min-width: $tablet-portrait) {
             display: flex;
         }
 
@@ -27,10 +27,10 @@
 
         .icon-heart {
             display: block;
-            padding: .25em;
+            padding: 0.25em;
             @media screen and (min-width: $mobile-landscape-custom) {
                 display: inline-block;
-                padding: 0 .15em;
+                padding: 0 0.15em;
             }
         }
     }
