--- a/_includes/site-form.html
+++ b/_includes/site-form.html
@@ -1,7 +1,7 @@
 {% if include.name %} {% assign name = include.name %} {% else %} {% assign name
 = "Contact" %} {% endif %} {% assign name_id = name | downcase | replace: " ",
 "-" %} {% if include.thanks_url %} {% assign thanks_url = include.thanks_url %}
-{% else %} {% assign thanks_url = "/thanks/" %} {% endif %}
+{% else %} {% assign thanks_url = "/thanks" %} {% endif %}
 
 <form
     class="form  form--{{ name_id }}"
