--- a/_includes/site-footer.html
+++ b/_includes/site-footer.html
@@ -19,7 +19,7 @@
                         <a class="footer__link" href="/blog/">Blog</a>
                     </li>
                     <li class="footer__item">
-                        <a class="footer__link" href="/services/">Skills</a>
+                        <a class="footer__link" href="/skills/">Skills</a>
                     </li>
                     <li class="footer__item">
                         <a class="footer__link" href="/contact/">Contact me</a>
