--- a/_pcss/styles.pcss
+++ b/_pcss/styles.pcss
@@ -47,7 +47,7 @@
 @import "pages/about";
 @import "pages/post";
 @import "pages/contact";
-@import "pages/services";
+@import "pages/skills";
 @import "pages/portfolio";
 @import "pages/project";
 @import "pages/blog";
