--- a/_includes/site-footer.html
+++ b/_includes/site-footer.html
@@ -54,7 +54,7 @@
                     <li class="footer__item">
                         <a
                             class="footer__link footer__link--tag"
-                            href="/tag/{{ tagname }}"
+                            href="/tag/{{ tagname | downcase }}"
                             >{{ tagname }}</a
                         >
                     </li>
