--- a/_pcss/pages/_blog.pcss
+++ b/_pcss/pages/_blog.pcss
@@ -1,10 +1,10 @@
 .blog {
-    max-width: var(--container__width--wide) !important;
     padding-top: var(--spacing__vertical--1);
     padding-left: var(--spacing__default--horizontal);
     padding-right: var(--spacing__default--horizontal);
     margin-left: auto;
     margin-right: auto;
+    max-width: var(--container__width--widest);
 }
 
 .blog__list {
@@ -51,6 +51,12 @@
 
 .blog__date {
     color: var(--color__grayscale--darker);
+}
+
+.discussion__item {
+    padding-bottom: var(--spacing__vertical--n1);
+    line-height: var(--spacing__vertical--1);
+    font-size: var(--typography__ms--n1);
 }
 
 @media (--mq__tablet--min) {
