--- a/_includes/site-aside.html
+++ b/_includes/site-aside.html
@@ -38,7 +38,7 @@
     <ul class="aside__list">
         <li>
             <a
-                target="blank"
+                target="_blank"
                 rel="nofollow noreferrer"
                 href="https://twitter.com/AdrianBDesigns"
             >
@@ -47,7 +47,7 @@
         </li>
         <li>
             <a
-                target="blank"
+                target="_blank"
                 rel="nofollow noreferrer"
                 href="https://github.com/codeAdrian"
             >
@@ -56,7 +56,7 @@
         </li>
         <li>
             <a
-                target="blank"
+                target="_blank"
                 rel="nofollow noreferrer"
                 href="https://www.linkedin.com/in/adrianbece/"
             >
