--- a/_pcss/components/_tags.pcss
+++ b/_pcss/components/_tags.pcss
@@ -1,11 +1,13 @@
 .tags {
     display: flex;
+    flex-wrap: wrap;
 }
 
 .tags__item {
     display: inline-blocK;
     margin-left: var(--spacing__horizontal--n2);
     margin-right: var(--spacing__horizontal--n2);
+    margin-bottom: var(--spacing__horizontal--n2);
     padding-left: var(--spacing__horizontal--n1);
     padding-right: var(--spacing__horizontal--n1);
 
