--- a/_pcss/layout/_page.pcss
+++ b/_pcss/layout/_page.pcss
@@ -13,6 +13,12 @@
     padding-bottom: var(--spacing__vertical--1);
 }
 
+.layout {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: var(--container__width--widest);
+}
+
 .layout__aside {
     display: none;
 }
