--- a/_pcss/layout/_header.pcss
+++ b/_pcss/layout/_header.pcss
@@ -40,7 +40,7 @@
 
 @media (--mq__desktop--min) {
     .header__button {
-        display: block;
+        display: flex;
         padding: var(--spacing__vertical--n3) var(--spacing__horizontal--1);
     }
 }
