--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -3,9 +3,19 @@
         {% if site.logo %}{% include site-logo.html %}{% endif %} {% include
         nav-header.html %}
         <div>
-            <a class="button button--cta header__button" href="/contact/">
-                Contact me
-            </a>
+            <a
+                class="header__button button button--cta"
+                target="_blank"
+                href="https://www.buymeacoffee.com/ubnZ8GgDJ"
+            >
+                <span class="button__text">
+                    Support my work
+                </span>
+                <img
+                    class="button__image"
+                    src="https://cdn.buymeacoffee.com/buttons/bmc-new-btn-logo.svg"
+                    alt="Buy me a coffee"
+            /></a>
         </div>
     </div>
 </header>
