--- a/_pcss/pages/_blog.pcss
+++ b/_pcss/pages/_blog.pcss
@@ -1,7 +1,3 @@
-.blog {
-    padding-top: var(--spacing__vertical--2);
-}
-
 .blog__layout {
     margin-top: calc(-1 * var(--spacing__vertical--2));
     padding-left: var(--spacing__horizontal--n1);
@@ -86,7 +82,7 @@
     }
 
     .blog__title {
-        padding-bottom: var(--spacing__vertical--n1);
+        padding-bottom: var(--spacing__vertical--1);
     }
 
     .blog__layout {
