--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,11 +48,21 @@
     <script src="/assets/scripts/glide.js"></script>
     <meta name="theme-color" content="{{ site.manifest.theme_color | default: '#242e2b' }}"/>
     <style>{% include critical.css %}</style>
+
+    <link rel="preload" href="/assets/fonts/devstar.ttf?ytkptp" as="font" type="font/ttf" crossorigin />
+    <link rel="preload" href="/assets/fonts/devstar.woff?ytkptp" as="font" type="font/woff" crossorigin />
+    <link rel="preload" href="/assets/fonts/devstar.svg?ytkptp" as="font" type="font/svg" crossorigin />
     
-    <link rel="preload" href="{{ '/assets/styles.css' | relative_url }}" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <link crossorigin rel="preload" href="{{ '/assets/styles.css' | relative_url }}" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="{{ '/assets/styles.css' | relative_url }}"></noscript>
     
-    <link  href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Oswald&display=swap" rel="stylesheet">
+    <!--   
+      <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Oswald&display=swap" rel="stylesheet">
+    -->
+
+    <link crossorigin rel="preload" href="{{ 'https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Oswald&display=swap' }}" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript><link rel="stylesheet" href="{{ 'https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Oswald&display=swap' }}"></noscript>
+    
 
     {% if site.avatarurl %}{% include site-favicons.html %}{% endif %}
 
