--- a/_includes/post-meta.html
+++ b/_includes/post-meta.html
@@ -4,7 +4,7 @@
         <a
             class="blog__authorLink"
             target="_blank"
-            rel="noreferrer nofollow"
+            rel="noopener noreferrer"
             href="{{ page.authorUrl }}"
             title="{{ page.author }}"
             >{{ page.author }}</a
