--- a/_includes/site-footer.html
+++ b/_includes/site-footer.html
@@ -40,7 +40,7 @@
                     <li class="footer__item">
                         <a
                             target="_blank"
-                            rel="nofollow noreferrer"
+                            rel="noopener noreferrer"
                             class="footer__link footer__link--tag"
                             href="https://dev.to/adrianbdesigns/you-can-create-these-elements-without-javascript-525a"
                             >You can create these elements without JavaScript</a
@@ -49,7 +49,7 @@
                     <li class="footer__item">
                         <a
                             target="_blank"
-                            rel="nofollow noreferrer"
+                            rel="noopener noreferrer"
                             class="footer__link footer__link--tag"
                             href="https://dev.to/prototyp/optimizing-images-for-the-web-an-in-depth-guide-4j7d"
                             >Optimizing images for the web - an in-depth
@@ -59,7 +59,7 @@
                     <li class="footer__item">
                         <a
                             target="_blank"
-                            rel="nofollow noreferrer"
+                            rel="noopener noreferrer"
                             class="footer__link footer__link--tag"
                             href="https://dev.to/prototyp/improve-your-css-with-these-5-principles-35jd"
                             >Improve your CSS with these 5 principles</a
@@ -81,7 +81,7 @@
                     <li class="footer__item">
                         <a
                             target="_blank"
-                            rel="nofollow noreferrer"
+                            rel="noopener noreferrer"
                             class="footer__link"
                             href="https://dev.to/adrianbdesigns/"
                         >
@@ -92,7 +92,7 @@
                     <li class="footer__item">
                         <a
                             target="_blank"
-                            rel="nofollow noreferrer"
+                            rel="noopener noreferrer"
                             class="footer__link"
                             href="https://twitter.com/AdrianBDesigns"
                         >
@@ -103,7 +103,7 @@
                     <li class="footer__item">
                         <a
                             target="_blank"
-                            rel="nofollow noreferrer"
+                            rel="noopener noreferrer"
                             class="footer__link"
                             href="https://github.com/codeAdrian"
                         >
@@ -114,7 +114,7 @@
                     <li class="footer__item">
                         <a
                             target="_blank"
-                            rel="nofollow noreferrer"
+                            rel="noopener noreferrer"
                             class="footer__link"
                             href="https://www.linkedin.com/in/adrianbece/"
                         >
