--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -6,6 +6,7 @@
             <a
                 class="header__button button button--cta"
                 target="_blank"
+                rel="noopener noreferrer"
                 href="https://www.buymeacoffee.com/ubnZ8GgDJ"
             >
                 <span class="button__text">
@@ -15,8 +16,8 @@
                     loading="lazy"
                     class="button__image lazyload"
                     src="https://res.cloudinary.com/dazdt97d3/image/upload/q_auto:low/v1546683551/devstar/placeholder.png"
-                    data-src="https://cdn.buymeacoffee.com/buttons/bmc-new-btn-logo.svg"
-                    alt="Buy me a coffee"
+                    data-src="/assets/bmc-new-btn-logo.svg"
+                    alt="Buy me a coffee logo icon coffee cup"
             /></a>
         </div>
     </div>
