--- a/_pcss/helpers/_colors.pcss
+++ b/_pcss/helpers/_colors.pcss
@@ -1,6 +1,6 @@
 :root {
     --color__cta--lighter: #f9efe8;
-    --color__cta: #c16014;
+    --color__cta: #aa5512;
     --color__cta--darker: #9a4d10;
 
     --color__primary: #151515;
