--- a/_includes/site-before-end.html
+++ b/_includes/site-before-end.html
@@ -21,9 +21,11 @@
     if (isIE) {
         var stylesLink = document.createElement("link");
         stylesLink.rel = "stylesheet";
-        stylesLink.href = "/assets/styles.css";
+        stylesLink.type = "text/css";
+        stylesLink.href = "https://codeadrian.github.io/assets/styles.css";
         var fontLink = document.createElement("link");
         fontLink.rel = "stylesheet";
+        fontLink.type = "text/css";
         fontLink.href =
             "https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Oswald&display=swap";
         document.head.appendChild(stylesLink);
