--- a/_includes/site-before-end.html
+++ b/_includes/site-before-end.html
@@ -20,7 +20,7 @@
         var stylesLink = document.createElement("link");
         stylesLink.rel = "stylesheet";
         stylesLink.type = "text/css";
-        stylesLink.href = "https://codeadrian.github.io/assets/critical.css";
+        stylesLink.href = "https://codeadrian.github.io/assets/all.css";
         var fontLink = document.createElement("link");
         fontLink.rel = "stylesheet";
         fontLink.type = "text/css";
