--- a/_includes/site-before-end.html
+++ b/_includes/site-before-end.html
@@ -17,15 +17,22 @@
     var isIE = !!window.MSInputMethodContext && !!document.documentMode;
 
     if (isIE) {
+        var fetchScript = document.createElement("script");
+        fetchScript.type = "text/javascript";
+        fetchScript.src = "/assets/scripts/fetch.js";
+
         var stylesLink = document.createElement("link");
         stylesLink.rel = "stylesheet";
         stylesLink.type = "text/css";
         stylesLink.href = "https://codeadrian.github.io/assets/all.css";
+
         var fontLink = document.createElement("link");
         fontLink.rel = "stylesheet";
         fontLink.type = "text/css";
         fontLink.href =
             "https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Oswald&display=swap";
+
+        document.head.appendChild(fetchScript);
         document.head.appendChild(stylesLink);
         document.head.appendChild(fontLink);
     }
