--- a/_pcss/all.pcss
+++ b/_pcss/all.pcss
@@ -54,9 +54,4 @@
 @import "pages/project";
 @import "pages/blog";
 
-// IE 11 specific hack
-@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
-    .featuredWork {
-        display: none !important;
-    }
-}
+@import "ie11";
