--- a/_includes/site-before-end.html
+++ b/_includes/site-before-end.html
@@ -17,6 +17,10 @@
     var isIE = !!window.MSInputMethodContext && !!document.documentMode;
 
     if (isIE) {
+        var promiseScript = document.createElement("script");
+        promiseScript.type = "text/javascript";
+        promiseScript.src = "/assets/scripts/promise.js";
+
         var fetchScript = document.createElement("script");
         fetchScript.type = "text/javascript";
         fetchScript.src = "/assets/scripts/fetch.js";
@@ -32,6 +36,7 @@
         fontLink.href =
             "https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Oswald&display=swap";
 
+        document.head.appendChild(promiseScript);
         document.head.appendChild(fetchScript);
         document.head.appendChild(stylesLink);
         document.head.appendChild(fontLink);
