--- a/_includes/site-before-end.html
+++ b/_includes/site-before-end.html
@@ -19,11 +19,13 @@
     if (isIE) {
         var promiseScript = document.createElement("script");
         promiseScript.type = "text/javascript";
-        promiseScript.src = "/assets/scripts/promise.js";
+        promiseScript.src =
+            "https://cdn.jsdelivr.net/npm/promise-polyfill@8.1.3/dist/polyfill.min.js";
 
         var fetchScript = document.createElement("script");
         fetchScript.type = "text/javascript";
-        fetchScript.src = "/assets/scripts/fetch.js";
+        fetchScript.src =
+            "https://cdn.jsdelivr.net/npm/whatwg-fetch@3.4.0/dist/fetch.umd.min.js";
 
         var stylesLink = document.createElement("link");
         stylesLink.rel = "stylesheet";
