--- a/_pcss/critical.pcss
+++ b/_pcss/critical.pcss
@@ -13,6 +13,7 @@
 @import "base/lost";
 @import "base/typography";
 
+@import "components/slider";
 @import "components/media";
 @import "components/buttons";
 @import "components/logo";
