--- a/_includes/site-before-end.html
+++ b/_includes/site-before-end.html
@@ -30,7 +30,7 @@
         var stylesLinkFf = document.createElement("link");
         stylesLinkFf.rel = "stylesheet";
         stylesLinkFf.type = "text/css";
-        stylesLinkFf.href = "https://codeadrian.github.io/assets/styles.css";
+        stylesLinkFf.href = "/assets/styles.css";
         document.head.appendChild(stylesLinkFf);
     }
 
@@ -38,7 +38,7 @@
         var stylesLink = document.createElement("link");
         stylesLink.rel = "stylesheet";
         stylesLink.type = "text/css";
-        stylesLink.href = "https://codeadrian.github.io/assets/all.css";
+        stylesLink.href = "/assets/all.css";
         document.head.appendChild(stylesLink);
     }
 </script>
