--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,14 @@
       <title>{% if collectiondata.title %}{{ collectiondata.title }}{% else %}{{page.title}}{% endif %} | {{ site.title }}</title>
       <meta name="description" content="{% if page.description %}{{page.description}}{% else %}{{page.excerpt}}{% endif %}">
 
+      <meta http-equiv="Content-Security-Policy" content="
+      default-src 'self' https://*.gstatic.com/ https://cdn.jsdelivr.net/ https://formspree.io/;
+      style-src 'unsafe-inline' 'self' https://*.googleapis.com/;
+      img-src 'self' https://*.cloudinary.com/ https://*.bcbits.com/;
+      script-src 'unsafe-inline' 'self' https://cdn.jsdelivr.net/;
+      connect-src https://dev.to/ https://cdn.jsdelivr.net/ https://formspree.io/;
+      frame-src https://www.youtube-nocookie.com/ https://formspree.io/;
+      ">
       <!-- Google / Search Engine Tags -->
       <meta itemprop="name" content="{% if collectiondata.title %}{{ collectiondata.title }}{% else %}{{page.title}}{% endif %} | {{ site.title }}">
       <meta itemprop="description" content="{% if page.description %}{{page.description}}{% else %}{{page.excerpt}}{% endif %}">
